result_tesis.txt
  File "program_tesis_luthfil.py", line 21
    pip install varname
              ^
SyntaxError: invalid syntax
srun: error: komputasi03: task 0: Exited with exit code 1
